--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 <p>O guia definitivo para o avô do século 21: equilibre tradição e modernidade, e construa memórias inesquecíveis com seus netos.</p>
                 
                 <!-- Coloque o link da Hotmart aqui -->
-                <a href="SEU_LINK_DA_HOTMART_AQUI" class="cta-button">QUERO MEU MANUAL AGORA</a>
+                <a href="https://pay.hotmart.com/J102313241Q" class="cta-button">QUERO MEU MANUAL AGORA</a>
                 <span class="trust-text">Compra segura | Acesso imediato ao ebook.</span>
 
                 <!-- Adicione a imagem da capa do seu ebook -->
@@ -438,7 +438,7 @@
         
         <img src="capa-ebook.jpg" alt="Capa do Ebook Manual do Avô Moderno" class="ebook-cover-small">
         <!-- Coloque o mesmo link da Hotmart aqui -->
-       <a href="SEU_LINK_DA_HOTMART_AQUI" class="cta-button">
+       <a href="https://pay.hotmart.com/J102313241Q" class="cta-button">
            <span class="desktop-text">SIM, QUERO SER UM AVÔ INESQUECÍVEL!</span>
            <span class="mobile-text">QUERO MEU MANUAL AGORA!</span>
       </a>
@@ -450,7 +450,7 @@
 <footer class="footer">
     <div class="container">
         <p>© 2025 Geraldo Lima Júnior. Todos os direitos reservados.</p>
-        <p>Para dúvidas ou suporte, entre em contato: <a href="mailto:seuemail@exemplo.com">seuemail@exemplo.com</a></p>
+        <p>Para dúvidas ou suporte, entre em contato: <a href="mailto:limajunior.geraldo@gmail.com">limajunior.geraldo@gmail.com</a></p>
         <div class="social-icon">
             <a href="https://www.instagram.com/DeAvoParaAvo" target="_blank" title="Siga no Instagram">📸</a>
         </div>
