--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         }
 
         /* Estilos da Seção 1 (Hero) */
+
         .hero {
             background-color: #f4efe8; /* Cor de fundo suave */
             padding: 60px 0;
@@ -109,7 +110,9 @@
         }
 
         /* Responsividade para Celulares */
+
 /* Estilos da Seção 3 (Solução/Benefícios) */
+
 .solution {
     padding: 80px 0;
     background-color: #fdfaf5; /* Retorna ao tom de creme claro */
@@ -155,7 +158,9 @@
                 font-size: 1em;
             }
         }
+
 /* Estilos da Seção 4 (Prova Social/Depoimentos) */
+
 .testimonials {
     padding: 80px 0;
     background-color: #ffffff; /* Fundo branco */
@@ -193,7 +198,7 @@
     font-weight: bold;
     color: #333;
     margin: 0;
-    text-align: right;
+    text-align: center;
 }
 /* Estilos da Seção 5 (Sobre o Autor) */
 .author {
@@ -234,6 +239,7 @@
 }
 
 /* Estilos da Seção 6 (Oferta Final) */
+
 .final-cta {
     padding: 80px 0;
     background-color: #4a4a4a; /* Fundo escuro para criar impacto */
@@ -272,6 +278,7 @@
 }
 
 /* Estilos do Rodapé */
+
 .footer {
     padding: 40px 20px;
     text-align: center;
@@ -317,6 +324,7 @@
 }
 
 /* Estilos da Nova Seção 6 (Escolha de Versão) */
+
 .choice-section {
     padding: 80px 0;
     background-color: #fdfaf5; /* Fundo creme claro */
@@ -402,6 +410,7 @@
     background-color: #c9302c;
 }
 /* Estilo para o card recomendado */
+
 .pricing-card.recommended {
     border: 2px solid #d9534f;
     position: relative;
@@ -418,6 +427,12 @@
     font-size: 0.9em;
     font-weight: bold;
 }
+/*.author {
+  text-align: center;
+  display: block;
+  margin-top: 20px;
+  font-style: italic;
+}/*
 
 
 
@@ -515,8 +530,9 @@
         </div>
         <div class="testimonials-grid">
             <div class="testimonial-card">
-                <p class="quote">"Este livro falou diretamente à minha alma. Eu me sentia exatamente assim, perdido. Agora tenho a confiança para ser o avô que sempre quis ser."</p>
-                <p class="author">- Carlos M., Avô do Lucas</p>
+                <p class="quote">"Estou amando o livro. Estou aqui pensando: vivi os dois mundos, o de antes, como neta e criança e o mundo de agora, como mãe. E agora, como serei como Avó, tendo vivido os dois “mundos “ 🤔
+."</p>
+                <p class="author">- Ana Flávia F.,Mãe da Clara e do Daniel</p>
             </div>
             <div class="testimonial-card">
                 <p class="quote">"Dei de presente para o meu pai e foi a melhor decisão! Nossa comunicação melhorou muito. É um presente que beneficia a família inteira."</p>
