--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <div class="connection-content">
             <!-- Coloque a imagem da página 8 na mesma pasta -->
             <div class="connection-image">
-                <img src="ilustracao-secao2.jpg" alt="Avô mostrando foto antiga para a neta">
+                <img src="ilustracao-secao2.jpg" alt="Avô mostrando foto antiga para a neta" style="width: 60%; height: auto; display: block; margin: 0 auto;">
             </div>
             <div class="connection-text">
                 <h2>Você se sente um "estranho no ninho"?</h2>
@@ -627,4 +627,5 @@
 
 </body>
 </html>
+
 
