--- a/index.html
+++ b/index.html
@@ -578,8 +578,8 @@
         </div>
         <div class="pricing-grid">
             <!-- Card do Ebook -->
-            <div class="pricing-card recommended">
-                <div class="recommended-badge">Mais Vendido</div>
+            <div class="pricing-card">
+                <!--div class="recommended-badge">Mais Vendido</div-->
                 <h3>Versão Digital (Ebook)</h3>
                 <p class="price">R$ 59,90</p>
                 <p class="price-note">Pagamento único</p>
@@ -594,7 +594,8 @@
             </div>
 
             <!-- Card do Livro Físico -->
-            <div class="pricing-card">
+            <div class="pricing-card recommended">
+				<div class="recommended-badge">Mais Vendido</div>
                 <h3>Versão Impressa</h3>
                 <p class="price">R$ 99,90</p>
                 <p class="price-note"> frete incluso</p>
@@ -627,5 +628,6 @@
 
 </body>
 </html>
+
 
 
