--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
   display: block;
   margin-top: 20px;
   font-style: italic;
-}/*
+}*/
 
 
 
@@ -472,7 +472,10 @@
         <div class="connection-content">
             <!-- Coloque a imagem da página 8 na mesma pasta -->
             <div class="connection-image">
-                <img src="ilustracao-secao2.jpg" alt="Avô mostrando foto antiga para a neta" style="width: 60%; height: auto; display: block; margin: 0 auto;">
+               <img src="ilustracao-secao2.jpg" 
+     		    alt="Avô mostrando foto antiga para a neta"
+                    style="width: 60%; height: auto; display: block; margin: 0 auto;">
+
             </div>
             <div class="connection-text">
                 <h2>Você se sente um "estranho no ninho"?</h2>
@@ -535,12 +538,12 @@
                 <p class="author">- Ana Flávia F., Mãe da Clara e do Daniel</p>
             </div>
             <div class="testimonial-card">
-                <p class="quote">"Dei de presente para o meu pai e foi a melhor decisão! Nossa comunicação melhorou muito. É um presente que beneficia a família inteira."</p>
-                <p class="author">- Juliana S., Mãe da Sofia</p>
+                <p class="quote">"Júnior que livro admirável! Escrito com muita sensatez e colocando todos os detalhes das preocupacões de todos os avós de hoje. Um abraço para todos vocês."</p>
+                <p class="author">- Cida D., Avó do Luiz Felipe, Rafael, Guilherme e Erasto</p>
             </div>
             <div class="testimonial-card">
-                <p class="quote">"Comprei para o meu marido e ele adorou. Uma leitura leve, emocionante e cheia de dicas práticas. Recomendo a todos os avós modernos!"</p>
-                <p class="author">- Sônia R., Avó da Helena</p>
+                <p class="quote">"Livro sensacional!!! Vale como Manual do Avô e dos Pais também, pois tem dicas maravilhosas para essa saudável interacão de geracões!!! Parabéns Júnior."</p>
+                <p class="author">- Márcio C., Pai da Luisa e da Olívia</p>
             </div>
         </div>
     </div>
@@ -595,7 +598,7 @@
 
             <!-- Card do Livro Físico -->
             <div class="pricing-card recommended">
-				<div class="recommended-badge">Mais Vendido</div>
+		<div class="recommended-badge">Mais Vendido</div>
                 <h3>Versão Impressa</h3>
                 <p class="price">R$ 99,90</p>
                 <p class="price-note"> frete incluso</p>
@@ -628,6 +631,3 @@
 
 </body>
 </html>
-
-
-
