--- a/index.html
+++ b/index.html
@@ -440,6 +440,25 @@
 
 
     </style>
+
+    <!-- Meta Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s )
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js' );
+    fbq('init', 'SEU-ID-DO-PIXEL-AQUI');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=SEU-ID-DO-PIXEL-AQUI&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
+
 </head>
 <body>
 
@@ -593,7 +612,8 @@
                     <li>Amigo do meio ambiente</li>
                 </ul>
                 <!-- Link da Hotmart para o Ebook -->
-                <a href="https://pay.hotmart.com/J102313241Q" class="cta-button">COMPRAR EBOOK</a>
+                <a href="https://pay.hotmart.com/J102313241Q" class="cta-button" onclick="fbq('track', 'InitiateCheckout', {content_name: 'Ebook'});">COMPRAR EBOOK</a>
+
             </div>
 
             <!-- Card do Livro Físico -->
@@ -609,7 +629,8 @@
                     <li>Qualidade de impressão profissional</li>
                 </ul>
                 <!-- Link para a página de compra do livro físico -->
-                <a href="https://pay.hotmart.com/L102368343I" class="cta-button">COMPRAR LIVRO FÍSICO</a>
+                <a href="https://pay.hotmart.com/L102368343I" class="cta-button" onclick="fbq('track', 'InitiateCheckout', {content_name: 'Livro Impresso'});">COMPRAR LIVRO FÍSICO</a>
+
             </div>
         </div>
     </div>
