--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js' );
-    fbq('init', 'SEU-ID-DO-PIXEL-AQUI');
+    fbq('init', '1993586931511444');
     fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
@@ -652,3 +652,4 @@
 
 </body>
 </html>
+
