--- a/index.html
+++ b/index.html
@@ -459,6 +459,21 @@
     /></noscript>
     <!-- End Meta Pixel Code -->
 
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T3G633NXRZ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-T3G633NXRZ');
+    </script>
+
+    <!-- End Google Analytics Code -->
+
+
+
 </head>
 <body>
 
