--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                     <li>Amigo do meio ambiente</li>
                 </ul>
                 <!-- Link da Hotmart para o Ebook -->
-                <a href="https://pay.hotmart.com/J102313241Q" class="cta-button" onclick="fbq('track', 'InitiateCheckout', {content_name: 'Ebook'});">COMPRAR EBOOK</a>
+                <a href="https://pay.hotmart.com/J102313241Q?checkoutMode=10" class="cta-button" onclick="fbq('track', 'InitiateCheckout', {content_name: 'Ebook'});">COMPRAR EBOOK</a>
 
             </div>
 
@@ -644,7 +644,7 @@
                     <li>Qualidade de impressão profissional</li>
                 </ul>
                 <!-- Link para a página de compra do livro físico -->
-                <a href="https://pay.hotmart.com/L102368343I" class="cta-button" onclick="fbq('track', 'InitiateCheckout', {content_name: 'Livro Impresso'});">COMPRAR LIVRO FÍSICO</a>
+                <a href="https://pay.hotmart.com/L102368343I?checkoutMode=10" class="cta-button" onclick="fbq('track', 'InitiateCheckout', {content_name: 'Livro Impresso'});">COMPRAR LIVRO FÍSICO</a>
 
             </div>
         </div>
